crates/ui-types/tests/compile-fail/noop_no_arg.rs
use poly_ui_types::ui_noop;

fn main() {
    ui_noop!();
}
